[package]
name = "aris"
version = "0.1.0"
edition = "2021"

[dependencies]
# error
anyhow = "1.0.95"
thiserror = "2.0.11"
bytes = "1.9.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-epoch"] }
mimalloc = "0.1.43"
rand = "0.8.5"
# log
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

ctor = "0.2.9"
color-backtrace = "0.6.1"
itertools = "0.14.0"
tokio = { version = "1.43.0", features = ["full"] }
fast-async-mutex = "0.6.7"
crc32fast = "1.4.2"
rio = "0.9.4"
